--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Rubik", sans-serif;
+}
+
+:root {
+
+--Gray-950: hsl(0, 0%, 17%);
+--Gray-400: hsl(0, 0%, 58%);
+
 }
 
 .main-container{
@@ -39,6 +50,7 @@
 
 .buscador-title{
     color: white;
+    font-weight: 500;
     text-align: center;
 }
 
@@ -91,7 +103,6 @@
 }
 
 .information-container{
-    border: 1px solid red;
     width: 100%;
     height: 25%;
     display: flex;
@@ -106,6 +117,10 @@
     color: gray;
     font-size: 15px;
     font-weight: 600;
+}
+
+.information-api{
+    font-weight: 500;
 }
 
 /*---------------- Contenedor del mapa ------------------------*/
