--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,8 @@
 .buscador{
     width: 80%;
     height: 60px;
+    padding-left: 30px;
+    font-size: 20px;
     border: none;
     border-bottom-left-radius: 13px;
     border-top-left-radius: 13px;
@@ -77,6 +79,7 @@
     background-color: rgb(0, 0, 0);
     border-top-right-radius:13px;
     border-bottom-right-radius: 13px;
+    cursor: pointer;
 }
 
 .buscador-img{
@@ -94,7 +97,7 @@
     flex-direction: column;
     background-color: white;
     position: absolute;
-    border: 1px solid black;
+    border: 1px solid rgb(173, 173, 173);
     border-radius: 20px;
     top: 45%;
     left: 50%;
