--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,6 +103,7 @@
     left: 50%;
     right: 50%;
     transform: translate(-50%, -50%);
+    z-index: 3;
 }
 
 .information-container{
@@ -129,7 +130,15 @@
 /*---------------- Contenedor del mapa ------------------------*/
 
 .map-container{
+    width: 100%;
+    height: 60%;
     border: 2px solid red;
+}
+
+.principal__map{
+    height: 100%;
+    height: 100%;
+    z-index: 2;
 }
 
 
@@ -137,16 +146,34 @@
 /*--------------------Media queries----------------------*/
 @media (min-width: 900px){
 
+    .header-container{
+        height: 40%;
+    }
+
     .header-container-img{
         background-image: url(/images/pattern-bg-desktop.png);
     }
 
+    .buscador-container{
+        justify-content: center;
+        align-items: center;
+    }
+
+    .buscador-conjunto{
+        width: 40%;
+    }
+
+    .buscador{
+        width: 100%;
+    }
+
+
+
 
     /*-- information container --*/
     .information-set{
-        height: 25%;
+        height: 21%;
         top: 40%;
-        border: 10px solid red;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -154,10 +181,11 @@
     }
 
     .information-container{
-        border: 1px solid black;
         height: 100%;
         align-items: flex-start;
         padding-left: 40px;
+        border-right: 1px solid black;
+        border-radius: 0;
     }
 
     .information-title{
